<resources>
    <string name="app_name">AlarmsXD</string>

    <!-- Login and registration String -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="do_not_have_a_account">Don\'t have an account? Sign Up</string>

    <!-- Home activity String  -->
    <string name="remember_title">Remember me about</string>
    <string name="remember_01">This reminder is about buying fish form Shopnow
        This reminder is about buying fish form Shopno</string>
    <string name="remember_arrival">Arrival</string>
    <string name="remember_location">Shyamoli, Adabor</string>
    <string name="remember_distance">300 ft</string>

    <!--    Navigation drawer String -->
    <string name="all_reminder">All Reminders</string>
    <string name="reminder_xd">Reminder XD</string>
    <string name="user_email">user@gmail.com</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Logout </string>

    <!--Add Reminder String  -->
    <string name="add_reminder">Add Reminder</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="remind_me_about">Remind me about</string>
    <string name="add_note">Add note</string>
    <string name="select_location">Select Location</string>
    <string name="reminder_range">Reminder Range</string>
    <string name="reminder_range_length">500</string>
    <string name="unique">Ft</string>
    <string name="attachment">Attachment</string>
    <string name="schedule">Schedule</string>
    <string name="ring_alarm">Ring Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="date_interval">Date Interval</string>
    <string name="start_from">Start From</string>
    <string name="today">Today</string>
    <string name="no_date_line">No Dateline</string>
    <string name="expires_on">Expires From</string>
    <string name="done">Done</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <!--    About ReminderXD String-->
    <string name="version">Version 1.0.0</string>
    <string name="company_license">2020_2021 ReminderXD Inc</string>
    <string name="license">LICENSE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Setting Activity String -->

    <string name="general">General</string>
    <string name="imperial">Imperial (ft/feet)</string>
    <string name="default_distance">Default Distance</string>
    <string name="units">Units</string>
    <string name="default_units">500 units</string>
    <string name="power_saver_mode">Power Saver Mode</string>
    <string name="power_saver_hint">Uses cellular network for
    reduced battery consumption. Turn on might lower the accuracy</string>
    <string name="alarms">Alarms</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="alarm_tone_name">Game of Thrones</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_hint">Until alarm is dismissed</string>
    <string name="voice_alert">Voice Alert</string>
    <string name="voice_alert_hint">App announcing the task details</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="snooze_time_hint">3 minutes</string>

</resources>
