<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_id"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />

    <item
        android:id="@+id/all_reminder_id"
        android:icon="@drawable/ic_all_reminder"
        android:title="@string/all_reminder"
        android:visible="false"/>

    <item
        android:id="@+id/setting_id"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/about_id"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />


    <item
        android:id="@+id/logout_id"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"
        android:visible="false"/>

</menu>