<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutReminderXD"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reminder_xd"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="12dp"
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/bg_rectangle"
        android:padding="12dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_license" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:textSize="22sp"/>



</LinearLayout>