<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragment.ArrivalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_me_about" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_rectangle">

            <EditText
                android:id="@+id/reminder_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/remind_me_about"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_rectangle">

            <EditText
                android:id="@+id/add_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollbars="none"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/add_note"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rectangle_fill_gray">

            <TextView
                android:id="@+id/select_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_microphone"
                android:gravity="center|start"
                android:text="@string/select_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="3"
                android:background="@drawable/bg_rectangle"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_range"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:background="@drawable/bg_rectangle"
                android:padding="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:text="@string/reminder_range_length"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/unique"
                android:textSize="18sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attachment" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:layout_below="@id/attachment_img"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/ring_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/ring_alarm" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ring_alarm"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                android:checked="true" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/attachment_img"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@id/attachment"
                android:layout_centerInParent="true"
                android:src="@drawable/arif_rahman" />

            <TextView
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:layout_below="@id/attachment_img"
                android:layout_alignParentEnd="true"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/repeat"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                android:checked="true"/>


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_interval"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/start_from"
                    android:padding="2dp"/>

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/today"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/expires_on" />

                <TextView
                    android:id="@+id/expires_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_date_line"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/add_reminder_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:cornerRadius="8dp"
            android:padding="10dp"
            app:backgroundTint="@color/purple"/>


    </LinearLayout>

</ScrollView>