<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/purple"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alarm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pin_01"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <View
            android:id="@+id/title_separator"
            android:layout_below="@id/alarm_title"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_below="@id/title_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_alarm_title"
                android:drawablePadding="8dp"
                android:text="@string/remember_01"
                android:textColor="@color/white" />

            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="32dp"/>

            <TextView
                android:id="@+id/alarm_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_arrival"
                android:drawablePadding="8dp"
                android:text="@string/remember_arrival"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="32dp"/>

            <TextView
                android:id="@+id/alarm_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_my_location"
                android:drawablePadding="8dp"
                android:text="@string/remember_location"
                android:textColor="@color/white" />

            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="32dp"/>

            <TextView
                android:id="@+id/alarm_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_alarm_distance"
                android:drawablePadding="8dp"
                android:text="@string/remember_distance"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>